--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<link type="text/css" rel="stylesheet" href="./css/normalize.css" />
 		<link type="text/css" rel="stylesheet" href="./css/font-awesome.min.css" />
 		<link type="text/css" rel="stylesheet" href="./css/style.css" />
-		<title>Archive | SaveTheInternet.eu</title>
+		<title>Archive | SaveTheInternet</title>
 	</head>
 
 	<body>
