Fix v6 thumbnail, add hover grayscale, adapt header2.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			</section>
 			<section class="row items2">
 				<div class="flexbox-center">
-					<a href="https://web.archive.org/web/20160528183135/https://savetheinternet.eu/en/" target="_blank">
+					<a href="javascript:;">
 						<img src="img/thumbnail/v6.jpg" alt="Version 6" class="thumbnail" />
 					</a>
 				</div>
@@ -139,7 +139,7 @@
 					<h4>Version 6</h4>
 					<em>April 2016 - June 2016</em>
 					<p>As the regulatory implementation The Body of European Regulators of Electronic Communication (BEREC) was now tasked to write the Guidelines for the EU wide implementation. This version of the campaign allowed citizens to formulate their opinion on net neutrality in the form of a questionnaire and send it to all 28 NRAs. It was acompanied by an <a href="https://edri.org/edris-first-input-on-net-neutrality-guidelines/">in-dept analysis of the legislation</a> that showed how to deliver real net neutrality within the letter of the law, a professional <a href="https://www.youtube.com/watch?v=nv3DeyqZzOg">explanatory video</a> and a <a href="http://www.apa-fotoservice.at/galerie/7863">demonstration in Vienna</a> around the plenary meeting were the draft guidelines text was decided.</p>
-					<a href="https://web.archive.org/web/20160528183135/https://savetheinternet.eu/en/" class="btn" target="_blank">Visit</a>
+					<a href="javascript:;" class="btn">Visit</a>
 				</article>
 			</section>
 			<section class="row items2">
