--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="How we saved the Internet." />
 		<meta name="keywords" content="net neutrality, connected conntinent, digital single market, dsm, specialised services, traffic management, zero rating, BEREC" />
 
-		<meta property="og:title" content="Save the Internet in Europe!" />
+		<meta property="og:title" content="Save the Internet" />
 		<meta property="og:image" content="./img/banner.png" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://savetheinternet.eu/" />
@@ -16,14 +16,14 @@
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:site_name" content="SaveTheInternet"/>
 
-		<meta name="twitter:title" content="Save the Internet in Europe!" />
+		<meta name="twitter:title" content="Save the Internet" />
 		<meta name="twitter:image" content="./img/banner.png" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:url" content="https://savetheinternet.eu/" />
 		<meta name="twitter:description" content="How we saved the Internet." />
 		<meta name="twitter:site" content="@AKVorrat_at" />
 
-		<link rel="shortcut icon" href="./img/fav.ico" type="image/png" />
+		<link rel="shortcut icon" href="./img/fav.ico" />
 		<link type="text/css" rel="stylesheet" href="./css/normalize.css" />
 		<link type="text/css" rel="stylesheet" href="./css/font-awesome.min.css" />
 		<link type="text/css" rel="stylesheet" href="./css/style.css" />
