Actually fix favicon.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<meta name="twitter:description" content="How we saved the Internet." />
 		<meta name="twitter:site" content="@AKVorrat_at" />
 
-		<link rel="shortcut icon" href="./img/fav.ico" />
+		<link rel="shortcut icon" href="./img/fav.ico" type="image/x-icon" />
 		<link type="text/css" rel="stylesheet" href="./css/normalize.css" />
 		<link type="text/css" rel="stylesheet" href="./css/font-awesome.min.css" />
 		<link type="text/css" rel="stylesheet" href="./css/style.css" />
