Link to git repository.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a href="https://plus.google.com/share?url=https://savetheinternet.eu/" target="_blank">
 				<i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i>
 			</a>
-			<a href="https://github.com/Netzfreiheit" target="_blank">
+			<a href="https://github.com/AKVorrat/archive.savetheinternet.eu/" target="_blank">
 				<i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
 			</a>
 		</aside>
