--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		<meta name="author" content="Arbeitskreis Vorratsdaten Österreich" />
-		<meta name="description" content="How we saved the Internet." />
+		<meta name="description" content="SaveTheInternet.eu wants to thank everyone who participated in this outstanding effort to defend net neutrality in Europe and keep Internet free and open!" />
 		<meta name="keywords" content="net neutrality, connected conntinent, digital single market, dsm, specialised services, traffic management, zero rating, BEREC" />
 
 		<meta property="og:title" content="Save the Internet" />
@@ -27,7 +26,7 @@
 		<link type="text/css" rel="stylesheet" href="./css/normalize.css" />
 		<link type="text/css" rel="stylesheet" href="./css/font-awesome.min.css" />
 		<link type="text/css" rel="stylesheet" href="./css/style.css" />
-		<title>Archive | SaveTheInternet</title>
+		<title>Save the Internet, protect net neutrality in Europe! | Archive</title>
 	</head>
 
 	<body>
@@ -36,7 +35,8 @@
 				<img src="img/logo.png" alt="Logo" id="logo">
 			</a>
 			<h1>Save the Internet</h1>
-			<h2>Archive</h2>
+			<p class="subtitle">SaveTheInternet.eu wants to thank everyone who participated in this outstanding effort to protect net neutrality in Europe and keep Internet free and open!<br><br><strong>Internet wins, thank you!</strong></p>
+			<h2>how we saved<br>the Internet</h2>
 			<a href="javascript:scrollTo('#internet-wins')"><i id="start" class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i></a>
 		</header>
 
@@ -73,7 +73,7 @@
 				<article class="description">
 					<h4>Version 1</h4>
 					<em>December 2013 - February 2014</em>
-					<p>This is the first verison of savetheinternet.eu which offered tools to contact Members of the European Parliament via fax, phone and e-mail to convince them to uphold net neutrality in the Telecom Single Market regulation. It was launched at the <a href="https://media.ccc.de/v/30C3_-_5348_-_de_-_saal_2_-_201312272145_-_der_kampf_um_netzneutralitat_-_markus_beckedahl_-_thomas_lohninger#video&t=30">30th Chaos Communication Congress</a> on 27.December 2013 and followed the EU law through all committee votes.</p>
+					<p>This is the first verison of savetheinternet.eu which offered tools to contact Members of the European Parliament via fax, phone and e-mail to convince them to uphold net neutrality in the Telecom Single Market regulation. It was launched at the <a href="https://media.ccc.de/v/30C3_-_5348_-_de_-_saal_2_-_201312272145_-_der_kampf_um_netzneutralitat_-_markus_beckedahl_-_thomas_lohninger#video&t=30">30th Chaos Communication Congress</a> on 27. December 2013 and followed the EU law through all committee votes.</p>
 					<a href="https://web.archive.org/web/20140214171618/http://www.savetheinternet.eu/" class="btn" target="_blank">Visit</a>
 				</article>
 			</section>
@@ -112,7 +112,7 @@
 				<article class="description">
 					<h4>Version 4</h4>
 					<em>February 2015 - October 2015</em>
-					<p>After all thee institutions have found their position on the dossier a law in the EU enters into a stage called "Trialogue". This stage is even less transparent than the previous one, but still SaveTheInternet tried to put pressure on the representatives of the political parties in the European Parliament. This version of the campaign used a timetable about all the meetings that we were informed about and offered users to send e-mails, call their representatives or write them on Twitter or Facebook. We gave <a href="https://edri.org/net-neutrality-document-pool-2/">analysis of all versions of the negotiated legal text</a>, held a protest in Barcelona in front of the headquarter of one of the largest telecom companies and debunked the main arguments of the telecom companies in an <a href="https://www.youtube.com/watch?v=g6fXpo8uQtA">animation video</a>(<a href="https://www.youtube.com/watch?v=6JZNvhCwKRE">original</a>), but in the end the Trialogue agreement was an ambigous and contradictory legal text. </p>
+					<p>After all thee institutions have found their position on the dossier a law in the EU enters into a stage called "Trialogue". This stage is even less transparent than the previous one, but still SaveTheInternet tried to put pressure on the representatives of the political parties in the European Parliament. This version of the campaign used a timetable about all the meetings that we were informed about and offered users to send e-mails, call their representatives or write them on Twitter or Facebook. We gave <a overhref="https://edri.org/net-neutrality-document-pool-2/">analysis of all versions of the negotiated legal text</a>, held a <a href="https://twitter.com/X_net_/status/658721973921562625" target="_blank">protest in Barcelona</a> in front of the headquarter of one of the largest telecom companies and debunked the main arguments of the telecom companies in an <a href="https://www.youtube.com/watch?v=g6fXpo8uQtA">animation video</a> (<a href="https://www.youtube.com/watch?v=6JZNvhCwKRE">original</a>), but in the end the Trialogue agreement was an ambigous and contradictory legal text. </p>
 					<a href="https://web.archive.org/web/20151012010852/http://savetheinternet.eu/" class="btn" target="_blank">Visit</a>
 				</article>
 			</section>
