--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<img src="img/logo.png" alt="Logo" id="logo">
 			</a>
 			<h1>Save the Internet</h1>
-			<p class="subtitle">SaveTheInternet.eu wants to thank everyone who participated in this outstanding effort to protect net neutrality in Europe and keep Internet free and open!<br><br><strong>Internet wins, thank you!</strong></p>
+			<p class="subtitle">SaveTheInternet.eu wants to thank everyone who participated in this outstanding effort to protect net neutrality in Europe and keep Internet free and open!<span>&nbsp;</span><strong>Internet wins, thank you!</strong></p>
 			<h2>how we saved<br>the Internet</h2>
 			<a href="javascript:scrollTo('#internet-wins')"><i id="start" class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i></a>
 		</header>
