--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 		</main>
 
 		<footer class="flexbox-center">
+			<p>We are concerned citizens from NGOs around Europe that care about civil liberties in the digital realm</p>
 			<ul class="row">
 				<li>
 					<a href="https://netzfreiheit.org/">
