--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="net neutrality, connected conntinent, digital single market, dsm, specialised services, traffic management, zero rating, BEREC" />
 
 		<meta property="og:title" content="Save the Internet" />
-		<meta property="og:image" content="./img/banner.png" />
+		<meta property="og:image" content="./img/save-the-internet-archive-img.png" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://savetheinternet.eu/" />
 		<meta property="og:description" content="How we saved the Internet." />
@@ -16,7 +16,7 @@
 		<meta property="og:site_name" content="SaveTheInternet"/>
 
 		<meta name="twitter:title" content="Save the Internet" />
-		<meta name="twitter:image" content="./img/banner.png" />
+		<meta name="twitter:image" content="./img/save-the-internet-archive-img.png" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:url" content="https://savetheinternet.eu/" />
 		<meta name="twitter:description" content="How we saved the Internet." />
