updated text and logos

--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
 		<main>
 			<section id="internet-wins">
 				<h3>Internet wins</h3>
-				<p>This summer, hundreds of thousands of Internet users banded together to keep the Internet open and free. Together, we sent a loud, clear message to BEREC, the Body of European Regulators of Electronic Communications: protect net neutrality.</p>
-				<p>And it worked! BEREC’s final guidelines, which were published on 30 August 2016, offer some of the strongest net neutrality protections we could wish for. So long as these new rules are properly enforced by national telecom regulators, they represent a resounding victory for net neutrality.</p>
+				<p>In this campaign hundreds of thousands of Internet users banded together from 2013 till 2016 to keep the Internet free and open. Together, we sent a loud, clear message to the European Institutions: protect net neutrality.</p>
+				<p>And it worked! The final rules, which were published on 30 August 2016, offer some of the strongest net neutrality protections we could wish for. So long as these new rules are properly enforced by national telecom regulators, they represent a resounding victory for net neutrality.</p>
 				<p>The public has made clear that will not leave the future of its digital public space to big telco lobbyists, but wants to decide for itself. To that end, civil society has to <a href="https://respectmynet.eu/">stay watchful</a> and observe that telecom operators don’t violate the new principles.</p>
 				<p>The consultation came as the final step of a legislative process that was launched in September 2013. During the ensuing three years, the SaveTheInternet.eu coalition campaigned successfully for the Regulation on which the BEREC consultation was based.</p>
 				<p><strong>SaveTheInternet.eu wants to thank everyone who participated in this outstanding effort to protect the free, open Internet! Thank you!</strong></p>
+				<p>If you want to help keep the movement for a free and open internet strong, <a href="https://spenden.epicenter.works/">please consider a donation</a>.</p>
 			</section>
 			<section class="row items2">
 				<div class="flexbox-center">
@@ -165,8 +166,8 @@ However, we did not reach an absolute majority for the <a href="http://www.europ
 			<p>We are concerned citizens from NGOs around Europe that care about civil liberties in the digital realm.</p>
 			<ul class="row">
 				<li>
-					<a href="https://netzfreiheit.org/">
-						<img src="img/supporter/ifnf.gif" alt="Initiative für Netzfreiheit">
+					<a href="https://epicenter.works/">
+						<img src="img/supporter/epicenter.gif" alt="epicenter.works">
 					</a>
 				</li>
 				<li>
@@ -250,13 +251,13 @@ However, we did not reach an absolute majority for the <a href="http://www.europ
 					</a>
 				</li>
 				<li>
-					<a href="https://akvorrat.at/">
-						<img src="img/supporter/akv.gif" alt="Arbeitskreis Vorratsdaten Österreich">
+					<a href="https://www.wikimedia.at/">
+						<img src="img/supporter/wikimedia-at.gif" alt="Wikimedia Österreich">
 					</a>
 				</li>
 				<li>
-					<a href="https://www.wikimedia.at/">
-						<img src="img/supporter/wikimedia-at.gif" alt="Wikimedia Österreich">
+					<a href="https://netzfreiheit.org/">
+						<img src="img/supporter/ifnf.gif" alt="Initiative für Netzfreiheit">
 					</a>
 				</li>
 				<li>
