--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<header class="flexbox-center">
 			<h1>Save the Internet</h1>
 			<p class="subtitle">SaveTheInternet.eu wants to thank everyone who participated in this outstanding effort to protect net neutrality in Europe and keep the Internet free and open!<span>&nbsp;</span><strong>Internet wins, thank you!</strong></p>
-			<h2><a href="https://akvorrat.at/content/how-we-saved-the-internet-in-europe">How we saved<br>the Internet</a></h2>
+			<h2><a href="https://en.epicenter.works/content/net-neutrality-vs-5g-what-to-expect-from-the-upcoming-reform-in-the-eu">How the battle<br>continues</a></h2>
 			<a href="javascript:scrollTo('#internet-wins')"><i id="start" class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i></a>
 		</header>
 
